# trash

./: .gitignore  README.md  hehe.cpp  hehe.md  timetable.md
analysis/: ie.typ  logic.typ  set.typ  test.typ
blog/hello/: hello.cabal
blog/hello/_cache/: 6712876889041999715
blog/hello/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
c/: README.md  a.out  adc.c  demo  demo.cpp  fuck.cpp  hehe  hehe.c  hello  hello.c  hello.cpp  hellp  nmsl.c  nmsl.ll  pwm.c  pwm1.c  timer.c  uart.c
cmake330/: CMakeLists.txt
cmt/: CMakeLists.txt  main.cpp  std.cmake
cpp/: CMakeLists.txt  README.md
cpp/.cache/clangd/index/: algo.cpp.28FBFF9D1C6D5446.idx  any.cpp.13F4214B85B3D104.idx  any.hpp.6D3999D7B8F935B9.idx  anytest.cpp.C2B6C01D52621188.idx  homework.cpp.18CE79C590133F83.idx  main.cpp.5E1E5D39CC303A65.idx  matchit.hpp.F2EA7C9F67E07C69.idx  multithreading.cpp.28A2E13775A840E7.idx  shits.cpp.BB604C8006A3AE85.idx  test.cpp.3D536CF110BD0F5F.idx  test.hpp.9F087A8529562D57.idx
cpp/apps/: main.cpp
cpp/include/: algo.hpp  any.hpp  anytest.hpp  matchit.hpp  test.hpp
cpp/libclangtest/: test.py
cpp/src/: any.cpp  anytest.cpp  co.cpp  homework.cpp  multithreading.cpp  shits.cpp  test.cpp  webserver.cpp
cpp_coroutine_demo/: CMakeLists.txt
cpp_coroutine_demo/apps/: main.cpp
cpp_coroutine_demo/src/: AsyncServer.cppm
cpp_importstd_test/: CMakeLists.txt
cpp_modules_demo/: CMakeLists.txt
cpp_modules_demo/.cache/clangd/index/: main.cpp.5E5876A73DF4C595.idx  main.cpp.E6291C5CE7F893BF.idx  shits.cppm.BA67AA7CC753A31D.idx  shits.cppm.ED1A4C11C2E63429.idx
cpp_modules_demo/apps/: cobin.cpp  main.cpp  mathapp.cpp
cpp_modules_demo/cmake/: std.cmake  toolchain.cmake
cpp_modules_demo/include/: spdlogger.hpp
cpp_modules_demo/src/: aiopptest.cpp  cotest.cppm  myMath.cppm  myMathGeometry.cppm  shits.cppm  spdlogger.cpp
cppco/apps/: main.cpp  mathapp.cpp
cppco/src/: aiopptest.cpp  cotest.cppm  myMathAlgebra.cppm
cppmt/: main  main.cpp  module.modulemap
dock/myapp/: Dockerfile
eng/: 8.md  listen.md  s.md  s2.md  templates.md
haskell/app/: LICENSE  app.cabal
haskell/app/app/: Main.hs
haskell/app/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/hello/: stack.yaml
haskell/hello/app/: Main.hs
haskell/hello/src/: Lib.hs
haskell/playground/: playground.cabal  stack.yaml
haskell/playground/app/: Main.hs
haskell/playground/src/: Hw4.hs  Lib.hs
haskell/test/: hello.hi  hello.hs
kl25z/: CMakeLists.txt  Makefile  Makefile.linux  readme.txt
kl25z/Project_Settings/Startup_Code/: kinetis_sysinit.c  kinetis_sysinit.h  startup.lst
kl25z/Sources/: main.c
kt/app/: build.gradle.kts
kt/gradle/wrapper/: gradle-wrapper.properties
le/feline/: Main.lean  lakefile.lean
le/greeting/: Main.lean  lakefile.lean
le/greeting/Greeting/: Basic.lean
le/trash/: Main.lean  Trash.lean  lake-manifest.json  lakefile.toml
le/trash/Trash/: Basic.lean
lean/: Main.lean  lake-manifest.json  lakefile.lean
lean/Foo/: Basic.lean
lisp/: main.lisp
llvmir/: fuck1.ll
m/: lab1.m
md/: report.docx  report.html  report.md
nix/drv/: flake.nix  result  test.nix
ocaml/hello/: dune-project
ocaml/hello/_build/: .db  .digest-db  log
ocaml/hello/_build/default/.dune/: configurator  configurator.v2
ocaml/hello/_build/default/lib/: hello.cma  hello.cmxa  hello.cmxs  hello.ml-gen
ocaml/hello/_build/default/lib/.hello.objs/byte/: hello.cmi  hello.cmo  hello.cmt
ocaml/hello/_build/default/lib/.hello.objs/native/: hello.cmx
ocaml/hello/_build/default/lib/.merlin-conf/: lib-hello
ocaml/hello/_build/default/test/.merlin-conf/: exe-test_hello
ocaml/hello/_build/default/test/.test_hello.eobjs/byte/: dune__exe__Test_hello.cmti
ocaml/hello/lib/: daymap.ml  maps.ml  mystack.ml  mystack.mli
ocaml/interpreter_ml/: dune-project
ocaml/interpreter_ml/lib/: dune
ocaml/interpreter_ml/test/: dune
py/: hehe.py
py/fff/: pyproject.toml
py/fff/src/fff/: __init__.py
py/fuc/: README.md  pyproject.toml
py/fuc/src/fuc/: __init__.py
py/fuck-python/: README.md  pyproject.toml
py/fuck-python/src/fuck_python/: __init__.py  __main__.py
py/hellp/: main.py
swift/hello/: Package.swift
swift/shit/: Package.swift
swift/shit/Sources/: main.swift
typst/: 3d.typ  test.typ  write.typ
v/clock/: clock.v  cntr_n.v
v/control/: control.v
v/fff/: adder.v  counter.v  first_counter  first_counter.v  first_counter.vcd  first_counter_tb  first_counter_tb.v  hello  hello.v  my_design
v/hello/: hello.sv  hello_tb.sv
v/tictactoe/: tic_tac_toe.v
v/tictactoe/parking/: fuck.c  parking.v  parking2.txt
