[project]
name = "fuck-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hank", email = "ysh2291939848@outlook.com" }
]
dependencies = [
    "ddddocr>=1.5.5",
    "numpy<2",
    "basedpyright>=1.15.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fuck-python" = "fuck_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fuck_python"]

[tool.basedpyright]
# many settings are not enabled even in strict mode, which is why basedpyright includes an "all" option
# you can then decide which rules you want to disable
typeCheckingMode = "all"
